<resources>
    <string name="app_name">TCGApp</string>
    <string name="image_here">Image Here:</string>
    <string name="title">Title:</string>
    <string name="title2">Title</string>
    <string name="price">Price:</string>
    <string name="price2">Price</string>
    <string name="category">Category:</string>
    <string name="rarity">Rarity:</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="dot">.</string>
    <string name="rarity2">Rarity</string>
    <string name="category2">Category</string>
    <string name="delete">Delete</string>
    <string name="add_image_here">Add Image here</string>
    <string name="change_image">Change Image</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="edit">Edit</string>
    <string name="remove_from_collection">Remove from collection</string>
    <string name="search_card">Search Card</string>
    <string name="todo">TODO</string>
    <string name="there_s_nothing_yet">There\'s nothing yet...</string>
    <string name="start_collecting_on_catch_them_all">Start collecting on Catch them all</string>
</resources>