<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCard"
    android:layout_width="@dimen/xxxxxxxxl"
    android:layout_height="@dimen/xxxxxxxxxl"
    android:layout_margin="@dimen/xs"
    app:cardCornerRadius="@dimen/s"
    app:cardElevation="@dimen/s">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/xl"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivCard"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/xxxxxxxl"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/giratinaex"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tx_l"
            android:textStyle="bold"
            android:text="@string/title2"/>
        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category2"/>
        <TextView
            android:id="@+id/tvRarity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rarity2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/xl"
                android:text="@string/price2"
                android:textSize="@dimen/tx_xxl"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>